# cpp-python-first-steps

./: README.md  trash
Matlab2_JK/: cmakelists.txt
Matlab2_JK/include/: matlab.hpp
Matlab2_JK/src/: matlab.cpp
Matlab2_JK/test/: test_vector.cpp
Matlab3_JK/: CMakeLists.txt  main.cpp
Matlab3_JK/include/: matlab.hpp
Matlab3_JK/src/: matlab.cpp
Matlab3_JK/test/: test_vector.cpp
Matlab6_7_8_JK/matlab6-jakubklos/: CMakeLists.txt
Matlab6_7_8_JK/matlab6-jakubklos/include/: matlab.hpp
Matlab6_7_8_JK/matlab6-jakubklos/src/: matlab.cpp
Matlab6_7_8_JK/matlab6-jakubklos/test/: test_matrix.cpp  test_vector.cpp
Matlab6_7_8_JK/matlab7-jakubklos/: CMakeLists.txt
Matlab6_7_8_JK/matlab7-jakubklos/include/: matlab.hpp
Matlab6_7_8_JK/matlab7-jakubklos/src/: matlab.cpp
Matlab6_7_8_JK/matlab8-jakubklos/: CMakeLists.txt  main.cpp
More About Classes/complex1 - jakub kêos/: CMakeLists.txt  main.cpp
More About Classes/matlab5_Jakub_Kêos/: CMakeLists.txt
More About Classes/shapes1 - jakub kêos/: CMakeLists.txt
More About Classes/vehicles2 - jakub kêos/: CMakeLists.txt
Python1_JK/basics1-jakubklos/: dicts.py  extras.py  lists.py
Python2_JK/catalogue1-jakubkêos/: catalogue.py
Python2_JK/vehicles1-jakubkêos/: vehicles.py
Python3_JK/Catalogue2-JakubKlos/: catalogue.py
Relationships Between Classes/matlab4_Jakub_Kêos/: CMakeLists.txt
Relationships Between Classes/vehicles1 - jakub kêos/: CMakeLists.txt  main.cpp
Smart Pointers_JK/Vehicles3 - jakbu kêos/: CMakeLists.txt
Smart Pointers_JK/shapes2 - jakub kêos/: CMakeLists.txt  main.cpp
(+30 files in other folders)
